--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "cg": "node src/cli.js examples/input.json output.json"
+    "cg": "node src/cli.js"
   },
   "keywords": [
     "Force-directed",
