cleaned code in cli.js and renamed files

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "Reyan Ahmed",
   "license": "ISC",
   "dependencies": {
-    "d3": "^7.3.0",
+    "d3": "^7.6.1",
+    "d3-force": "^3.0.0",
     "d3-quadtree": "^3.0.1",
     "mathjs": "^10.1.1",
     "node-fetch": "^3.2.0",
