--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "license": "ISC",
   "dependencies": {
     "cytoscape": "^3.23.0",
+    "cytoscape-dagre": "^2.5.0",
+    "cytoscape-euler": "^1.2.2",
+    "cytoscape-svg": "^0.4.0",
     "d3": "^7.6.1",
     "d3-force": "^3.0.0",
     "d3-quadtree": "^3.0.1",
