Added Jsdoc and cleaned up code

--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
     "cytoscape-dagre": "^2.5.0",
     "cytoscape-euler": "^1.2.2",
     "cytoscape-svg": "^0.4.0",
-    "d3": "^7.6.1",
+    "d3": "^7.8.2",
     "d3-force": "^3.0.0",
     "d3-quadtree": "^3.0.1",
     "dotparser": "^1.1.1",
+    "glob": "^9.2.1",
     "graphology": "^0.25.1",
     "graphology-shortest-path": "^2.0.1",
     "loadash": "^1.0.0",
     "lodash.merge": "^4.6.2",
     "mathjs": "^10.1.1",
+    "natsort": "^2.0.3",
+    "ndarray": "^1.0.19",
+    "ndarray-ops": "^1.2.2",
     "node-fetch": "^3.3.0",
+    "numpy": "^0.0.1",
     "papaparse": "^5.4.0",
     "simulation": "^1.0.1",
     "split2": "^4.1.0",
