--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,16 @@ lib-cov
 coverage
 *.lcov
 
+# Dataset folder
+examples/batchtree/
+examples/csv
+examples/textFile/
+
+# Python files
+*.pyc
+__pycache__/
+
+
 # nyc test coverage
 .nyc_output
 
