--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "graphology": "^0.25.1",
     "graphology-shortest-path": "^2.0.1",
     "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "lodash.merge": "^4.6.2",
     "mathjs": "^10.1.1",
     "natsort": "^2.0.3",
