--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "cg": "node src/cli.js"
+    "cg": "node src/cli.js",
+    "fix-jiggle": "cp src/jiggle-patch.js node_modules/d3-force/src/jiggle.js"
   },
   "keywords": [
     "Force-directed",
