--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@map4sci-cg",
+  "name": "@map4sci/cg",
   "version": "1.0.0",
   "description": "A force directed algorithm to generate compact layouts",
   "main": "cg.js",
@@ -27,6 +27,7 @@
     "d3": "^7.8.2",
     "d3-quadtree": "^3.0.1",
     "dotparser": "^1.1.1",
+    "gen-readlines": "^1.0.1",
     "glob": "^9.2.1",
     "graphology": "^0.25.1",
     "graphology-shortest-path": "^2.0.1",
